--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "joi": "^17.9.2",
     "mongoose": "^7.2.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
